--- a/Desafios/10_Segunda-Entrega-Proyecto-Final/package.json
+++ b/Desafios/10_Segunda-Entrega-Proyecto-Final/package.json
@@ -15,8 +15,11 @@
     "express": "^4.18.1",
     "express-useragent": "^1.0.15",
     "firebase-admin": "^11.2.0",
+    "knex": "^2.3.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.7.2",
+    "msql": "^1.0.3",
+    "mysql": "^2.18.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
