--- a/Desafios/10_Segunda-Entrega-Proyecto-Final/package.json
+++ b/Desafios/10_Segunda-Entrega-Proyecto-Final/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon -r dotenv/config index.js",
@@ -12,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-useragent": "^1.0.15",
     "firebase-admin": "^11.2.0",
