--- a/Desafios/13_Login_registrer/package.json
+++ b/Desafios/13_Login_registrer/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "11_login-formulario",
-  "version": "0.0.0",
-  "private": true,
+  "name": "13_login.registrer",
+  "version": "1.0.0",
+  "description": "<img src=\"https://egymerch.com/site_assets/assets/imgs/login/login.png\" alt=\"\" width=\"300\">",
+  "main": "app.js",
   "scripts": {
     "start": "node ./bin/www",
     "dev": "node ./node_modules/nodemon/bin/nodemon.js -r dotenv/config ./bin/www",
@@ -9,6 +10,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -26,6 +28,9 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "normalizr": "^3.6.2",
+    "mongoose": "^6.7.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.2",
     "socket.io": "^4.5.2",
     "sqlite3": "^5.1.2",
@@ -34,5 +39,8 @@
   "devDependencies": {
     "dotenv": "^16.0.2",
     "nodemon": "^2.0.19"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
