--- a/Desafios/13_Login_registrer/package.json
+++ b/Desafios/13_Login_registrer/package.json
@@ -17,10 +17,10 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "^3.1.8",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
-    "hbs": "~4.0.4",
+    "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "joi": "^17.6.0",
     "knex": "^2.3.0",
