--- a/Desafios/17_Tercera-Entrega-Proyecto-Final/package.json
+++ b/Desafios/17_Tercera-Entrega-Proyecto-Final/package.json
@@ -13,17 +13,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "connect-busboy": "^1.0.0",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "express-useragent": "^1.0.15",
     "firebase-admin": "^11.2.0",
     "fs-extra": "^11.1.0",
+    "http-errors": "^2.0.0",
     "knex": "^2.3.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.7.2",
+    "morgan": "^1.10.0",
     "msql": "^1.0.3",
     "mysql": "^2.18.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "random-id": "^1.0.4",
     "uuid": "^9.0.0",
     "vary": "^1.1.2"
   },
