--- a/Desafios/15_Balance_carga/nginx.conf
+++ b/Desafios/15_Balance_carga/nginx.conf
@@ -2,21 +2,32 @@ events {
 }
 
 http {
-    include        mime.types;
-    default_type   aplication/octet-stream;
+      include mime.types;
+      default_type application/octet-stream;
 
-    upstream node_app {
-        server 127.0.0.1:8081;
-        server 127.0.0.1:8082;
-    }
+      upstream node_app {
+            server 127.0.0.1:8081;
+      }
 
-    server{
-        listen        80;
-        server_name   mginx_node;
-        root          "C:\Users\Amaro\OneDrive\Documentos\Desarrollo de software\0. Cursos\CoderHouse - Desarrollo-Backend\Apuntes\Clase 30 - Proxy y Nginx\Ejercicio 1\public";
-        
-        location /datos/ {
-            proxy_pass http://node_app;
-        }
-    }
+      upstream random_app {
+            server 127.0.0.1:8082;
+            server 127.0.0.1:8083;
+            server 127.0.0.1:8084;
+            server 127.0.0.1:8085;
+      }
+
+      server {
+            listen 80;
+            server_name nginx_node;
+
+            root "C:\Users\Amaro\OneDrive\Documentos\Desarrollo de software\0. Cursos\CoderHouse - Desarrollo-Backend\Desafios\15_Balance_carga\public";
+
+            location / {
+                  proxy_pass http://node_app;
+            }
+
+            location /api/random/ {
+            proxy_pass http://random_app;
+            }
+      }
 }
