--- a/Desafios/16_Loggers_gzip/package.json
+++ b/Desafios/16_Loggers_gzip/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -36,7 +37,8 @@
     "pug": "^3.0.2",
     "socket.io": "^4.5.2",
     "sqlite3": "^5.1.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.2",
